--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,12 @@ __pycache__/
 # 如果你需要跟踪这些数据，请删除下面这一行
 5G-NIDD/
 data/
+
 Chapter3_Static_FewShot/results_visual
 Chapter3_Static_FewShot/saved_models
+
+Chapter4_Incremental/saved_models
+Chapter4_Incremental/data
 
 # 忽略其他常见的系统文件
 .DS_Store
